--- a/cicom-app/bower.json
+++ b/cicom-app/bower.json
@@ -25,6 +25,7 @@
     "oclazyload": "^1.1.0",
     "angular-cookies": "*",
     "angular-animate": "^1.5.7",
-    "angular-sanitize":"^1.6.8"
+    "angular-sanitize": "^1.6.8",
+    "ng-file-model": "*"
   }
 }
