--- a/cicom-app/package.json
+++ b/cicom-app/package.json
@@ -19,7 +19,9 @@
     "http-server": "^0.11.1",
     "install": "^0.10.2",
     "ng-csv": "^0.3.6",
+    "ng-file-model": "0.0.5",
     "npm": "^6.4.0",
-    "papaparse": "^4.6.0"
+    "papaparse": "^4.6.0",
+    "xlsx": "^0.13.5"
   }
 }
