--- a/cicom-app/bower.json
+++ b/cicom-app/bower.json
@@ -3,7 +3,7 @@
   "authors": [
     "Luis Campos <luigui12595@gmail.com>"
   ],
-  "description": "Cicom Platform",
+  "description": "MediaTIC Platform",
   "main": "",
   "license": "MIT",
   "homepage": "",
