--- a/cicom-app/package.json
+++ b/cicom-app/package.json
@@ -15,6 +15,7 @@
     "angular-datetime-input": "^5.2.1",
     "angular-js-xlsx": "0.0.3",
     "angular-utils-pagination": "^0.11.1",
+    "bower": "^1.8.4",
     "btoa": "^1.1.2",
     "http-server": "^0.11.1",
     "install": "^0.10.2",
