--- a/cicom-plat/package.json
+++ b/cicom-plat/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "debug": "npm start"
+    "debug": "npm start app.js"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -13,7 +13,7 @@
     "express": "^4.16.3",
     "jade": "~1.11.0",
     "md5": "^2.2.1",
-    "morgan": "~1.9.0",
+    "morgan": "^1.9.1",
     "mysql": "^2.15.0",
     "serve-favicon": "~2.4.5"
   }
